gst-libs/gst/gl/gstglwindow.h
@@ -79,6 +79,7 @@ struct _GstGLWindow {
 
   guintptr      external_gl_context;
 
+  /*< protected >*/
   gboolean      is_drawing;
 
   GstGLWindowCB         draw;
@@ -92,6 +93,8 @@ struct _GstGLWindow {
   GDestroyNotify        resize_notify;
 
   gboolean              queue_resize;
+
+  GMainContext         *main_context; /* default main_context */
 
   /*< private >*/
   GstGLWindowPrivate *priv;
